tests/error/empty_obj_data.gw
#! [contains] NullPtrException
class C
{
	int i;
}

C ref c;
c.i;
